[project]
name = "molzen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["molzen"]

[tool.pytest.ini_options]
markers = [
    "local_only: tests requiring local data not available in GitHub CI",
]
